--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "sonata-project/form-extensions": "^0.1.2 || ^1.4",
         "sonata-project/twig-extensions": "^0.1.1 || ^1.3",
         "symfony/config": "^4.4 || ^5.2",
-        "symfony/console": "^4.4",
+        "symfony/console": "^4.4 || ^5.2",
         "symfony/dependency-injection": "^4.4 || ^5.2",
         "symfony/event-dispatcher": "^4.4",
         "symfony/filesystem": "^4.4 || ^5.2",
